fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ a {
 
 .main {
   min-height: 84vh;
+  overflow-x: hidden;
 }
 
 footer {
